backends/drm: fix DrmGpu::needsModeset check with leased outputs

It just wrongly triggers modesets that will then (at least try to) ignore the
leased-away resources anyways, and regress performance on the other displays.

BUG: 495400


(cherry picked from commit f4d24cce43c59fc3fd57a34be8d43fe3033dd04f)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>